stryker/Metadata/unpackaged/objects/Sales_Hirachy__c.object
<CustomObject>
    <fields>
        <fullName>Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Child_Party_Role__c</fullName>
        <label>Child Party Role</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Role__c</fullName>
        <label>Party Role</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Hirachys</relationshipLabel>
        <relationshipName>Sales_Hirachys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Sales Hirachy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Hirachy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Hirachys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>